--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@google/genai": "^1.38.0",
     "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
     "express": "^4.22.1"
   }
 }
